hand exceeded exception handling